# rust-learning-crud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.single  STEPS.md
.sqlx/: query-48bf48c82ad6bb8b9ce13a9f5e601b9c5df27cf6d0eafc98dae76d7d92f62a78.json  query-94a5b874751a6608147c3366a4e9f814d4a842dd49a938a5364186832e5dcc4a.json  query-e80161f85d6f2ffa7d9edd9cc8bbfc2dee0511fd875fc4a3c3e175af70c891c6.json  query-fee6c2da4a90399dc8833a4226086623efc49235f182327924648017cd3dc130.json
src/: db.rs  handlers.rs  main.rs  models.rs
